<resources>
    <!-- NAVEGADOR-->
    <string name="nav_explorar">Explorar</string>
    <string name="nav_favoritos">Favoritos</string>
    <string name="nav_eventos">Eventos</string>
    <string name="nav_perfil">Perfil</string>

    <!--APPLICATION-->
    <string name="app_name">ClearSand</string>

    <!--Activity LOGIN-->
    <string name="et_email_login">   Email</string>
    <string name="img_desc_login">Imagen del logo ClearSand</string>
    <string name="et_password_login">Password</string>
    <string name="btn_SignIn_login">Iniciar Sesión</string>
    <string name="btn_google_login">Iniciar con Google</string>
    <string name="btn_facebook_login">Inicar con Facebook</string>
    <!--Login TOAST-->
    <string name="msj_no_data_login">Tienes que introducir un email y una contraseña</string>
    <string name="msj_no_email_login">Tienes que introducir un email</string>
    <string name="msj_no_password_login">Tienes que introducir una contraseña</string>
    <string name="msj_pwd_length_login">La contraseña tiene que tener al menos 6 caracteres</string>
    <string name="msj_logado_login">Usuario logado:</string>
    <string name="msj_no_accede_login">Usuario no registrado o contraseña inválida</string>

    <!--Activity REGISTER-->
    <string name="txt_WelcomeRegister">Bienvenido Usuario!</string>
    <string name="et_Email_Register">Email</string>
    <string name="et_Nombre_Register">Nombre</string>
    <string name="et_Contrasenya_Register">Contraseña</string>
    <string name="et_ContrasenyaRepeat_Register">Repite contraseña</string>
    <string name="btn_Registrar_register">Registrar</string>
    <string name="btn_cancelar_register">Cancelar</string>
    <string name="txt_clear_sand_splash_creen">ClearSand</string>
    <string name="tv_link_registrar_login">¿no estás registrado? Registrate aquí</string>
    <string name="msj_no_data_register">Debe introducir el email y la password</string>
    <string name="msj_registrado_register">Usuario registrado</string>
    <string name="msj_no_registrado_register">No se ha podido registrar al usuario</string>
    <string name="msj_no_accede_register">El usuario no está registrado en el sistema</string>
    <string name="msj_pwd_length">La password debe contener al menos 6 caracteres</string>
    <string name="msj_userregistered_register">Usuario registrado:</string>
    <string name="msj_no_registrado">Usuario no registrado correctamente</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="txt_t_NombreUserProfile">Nombre:  %1$s</string>
    <string name="txt_ApellidosUserProfile">Apellidos: %1$s</string>
    <string name="txt_EdadUserProfile">Edad: %1$s</string>
    <string name="txt_EmailUserProfile">Email: %1$s</string>
    <string name="clave_UserPhoto">FotosUsuarios</string>
    <string name="clave_User">usuarios</string>
    <string name="txt_SinEspecificar">Sin especificar</string>

    <!--Layout CartaPlaya-->
    <string name="tv_distancia_card">A %.1f km</string>

    <string name="title_activity_tarjeta_eventos">TarjetaEventos</string>

    <!--Activity MakeEvent-->
    <string name="title_activity_scrolling">Crea tu evento</string>
    <string name="action_settings_Evento">Settings</string>
    <string name="hint_name_beach_scrolling_activity">Introduce el nombre de la playa</string>
    <string name="hint_local_beach">Introduce la localización</string>
    <string name="hint_title_event">Titulo del evento</string>
    <string name="hint_fecha_evento" />
    <string name="hint_horario_event">Introduce la hora del evento</string>
    <string name="titlulo_pickers">Obtener fecha y hora</string>
    <string name="formato_fecha">dd/mm/aaaa</string>
    <string name="formato_hora">hh:mm</string>
    <string name="et_comentario_crear_eventoo">Introduce un comentario con las \n especificaciones a realizar  \n y el punto de encuentro.</string>
    <string name="tv_crea_evento">\t Crea tu propio evento</string>

    <!--Activity Perfil playa-->
    <string name="tv_perfil_playa_ubicacion">La ubicación</string>
    <string name="tv_nombre_perfil_playa_activity">Nombre playa</string>
    <string name="btn_crear_evento">Crear evento de limpieza</string>
    <string name="tv_voluntariado">Voluntariado</string>
    <string name="btn_como_llegar">Como llegar</string>
    <string name="title_activity_maps">Map</string>
    <string name="estado_playa">ESTADO DE LA PLAYA:  %s</string>
    <string name="btn_crer_evento">Crear</string>


</resources>
