<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arena"
    tools:context=".LoginActivity">

    <FrameLayout
        android:id="@+id/frameLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/degradado">

    </FrameLayout>

    <ImageView
        android:id="@+id/imgLogoLogin"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/img_desc_login"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <LinearLayout
        android:id="@+id/linearVertLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogoLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@android:drawable/sym_action_email"
            android:drawableLeft="@drawable/ic_correo"
            android:drawablePadding="16dp"
            android:hint="@string/et_email_login"
            android:inputType="textEmailAddress"
            android:padding="12dp" />

        <EditText
            android:id="@+id/etPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_lock_idle_lock"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/et_password_login"
            android:inputType="textPassword"
            android:padding="12dp" />

        <Button
            android:id="@+id/btnSignInLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_sign_up_login"
            android:fontFamily="@font/roboto_thin"
            android:onClick="acceder"
            android:text="@string/btn_SignIn_login"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLinkRegistrarLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:onClick="registrar"
            android:text="@string/tv_link_registrar_login"
            android:textColor="@color/naranja"
            android:textStyle="bold"
            app:fontFamily="@font/roboto_medium" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             />


        <!--<Button-->
        <!--android:id="@+id/btnGoogleLogin"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="50dp"-->
        <!--android:background="@drawable/button_border_google_login"-->
        <!--android:drawableLeft="@drawable/ic_google_plus"-->
        <!--android:paddingLeft="16dp"-->
        <!--android:paddingRight="40dp"-->
        <!--android:text="@string/btn_google_login"-->
        <!--android:textColor="@android:color/white" />-->

        <Button
            android:id="@+id/btnFacebookLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_border_facebook_login"
            android:drawableLeft="@drawable/ic_facebook"
            android:drawablePadding="10dp"
            android:paddingLeft="16dp"
            android:paddingRight="32dp"
            android:text="@string/btn_facebook_login"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>