<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilPlayaActivity">


    <ImageView
        android:id="@+id/ivPerfilPLayaActivity"
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        app:srcCompat="@android:drawable/ic_menu_help" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginTop="172dp"
        android:padding="16dp"
        android:layout_alignParentLeft="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvEstadoPlaya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="35dp"
                android:layout_marginLeft="35dp"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/estado_playa" />

            <TextView
                android:id="@+id/tvNombrePlayaPerfilActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvEstadoPlaya"
                android:layout_alignParentStart="true"
                android:layout_marginStart="34dp"
                android:text="@string/tv_nombre_perfil_playa_activity"
                android:textSize="36sp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="34dp"
                android:fontFamily="@font/roboto_thin"/>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="18dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/tvUbicacionPlayaPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="34dp"
                android:layout_marginLeft="34dp"
                android:layout_marginBottom="8dp"
                android:text="@string/tv_perfil_playa_ubicacion"
                android:textSize="24sp"
                android:fontFamily="@font/roboto_thin"/>

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="187dp"
                tools:context=".PerfilPlayaActivity" />

            <Button
                android:id="@+id/btnComollegar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_border_playa"
                android:fontFamily="@font/roboto_medium"
                android:onClick="comoLlegar"
                android:text="@string/btn_como_llegar"
                android:textColor="@color/common_google_signin_btn_text_dark_default" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/tvVoluntariado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto_thin"
                android:text="@string/tv_voluntariado"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnCrearEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border_playa"
                android:fontFamily="@font/roboto_medium"
                android:onClick="crearEvento"
                android:text="@string/btn_crear_evento"
                android:textColor="@color/common_google_signin_btn_text_dark_default"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>