<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearEventoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:background="@color/azulClaro">

        <TextView
            android:id="@+id/tvCreaEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:paddingTop="25dp"
            android:text="@string/tv_crea_evento"
            android:textSize="36sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="97dp"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etTituloEvento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/hint_title_event"
                android:inputType="textPersonName"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tvFechaHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/etNameBeach"
                android:layout_alignLeft="@+id/etNameBeach"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/roboto_medium"
                android:paddingBottom="15dp"
                android:text="@string/titlulo_pickers"
                android:textSize="24sp"
                app:layout_constraintHorizontal_bias="0.025"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp">

                <ImageButton
                    android:id="@+id/ib_obtener_hora"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="69dp"
                    android:background="@drawable/ic_clock"
                    android:onClick="hora"
                    app:layout_constraintHorizontal_bias="0.504"
                    app:layout_constraintLeft_toRightOf="@+id/et_mostrar_hora_picker"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_mostrar_fecha_picker"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/et_mostrar_hora_picker"
                    android:layout_width="102dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/formato_hora"
                    android:inputType="time"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_mostrar_fecha_picker" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="10dp">

                <ImageButton
                    android:id="@+id/ib_obtener_fecha"
                    android:layout_width="59dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="70dp"
                    android:layout_marginRight="70dp"
                    android:background="@drawable/ic_calendar"
                    android:onClick="fecha"
                    app:layout_constraintHorizontal_bias="0.505"
                    app:layout_constraintLeft_toRightOf="@+id/et_mostrar_fecha_picker"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/et_mostrar_fecha_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/formato_fecha"
                    android:inputType="date"
                    app:layout_constraintLeft_toLeftOf="parent" />

            </LinearLayout>

            <EditText
                android:id="@+id/etComentario"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:ems="10"
                android:fontFamily="@font/roboto_medium"
                android:hint="@string/et_comentario_crear_eventoo"
                android:inputType="textPersonName"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnCrearEvento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:background="@drawable/button_border_playa"
                android:onClick="crearEvento"
                android:text="@string/btn_crer_evento"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>